--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,8 @@
+group 'com.senyasdt4745.github'
+version '1.0-SNAPSHOT'
+
 buildscript {
+
     repositories {
         mavenCentral()
     }
@@ -7,6 +11,8 @@ buildscript {
     }
 }
 
+
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
@@ -14,8 +20,8 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 bootJar {
-    baseName = 'gs-serving-web-content'
-    version =  '0.1.0'
+    baseName = 'first-simple-spring-program'
+    version = '0.1.0'
 }
 
 repositories {
