--- a/build.gradle
+++ b/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.1.3.RELEASE'
     compile group: 'com.h2database', name: 'h2', version: '1.4.199'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.4.RELEASE'
+    compile group: 'org.javassist', name: 'javassist', version: '3.25.0-GA'
     testCompile("junit:junit")
 }
