--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.h2.console.enabled=true
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.username=user
 spring.datasource.password=
 
 spring.jpa.show-sql=true
